<resources>
    <string name="app_name">UoR Campus Assistant</string>
    <string name="mainStudentInfoBtnText">Student Information</string>
    <string name="mainLatestNewsBtnText">Latest News</string>
    <string name="mainCampusNavBtnText">Campus Navigation</string>
    <string name="mainTravelInfoBtnText">Travel Information</string>
    <string name="mainBbEmailBtnText">Blackboard &amp; Email</string>
    <string name="studentInfoServicesBtnText">Student Services</string>
    <string name="studentInfoLibraryBtnText">Library</string>
    <string name="studentInfoPaymentsBtnText">Payments</string>
    <string name="studentInfoRisisBtnText">RISIS</string>
    <string name="studentInfoStaffDirectoryBtnText">Staff Search</string>
    <string name="mainTimetableBtnText">Timetable</string>
    <string name="campusNavInteractiveMapBtnText">Interactive Map</string>
    <string name="campusNavMapsBtnText">Campus Maps</string>
    <string name="travelInfoBusTimesBtnText">Live Bus Times</string>
    <string name="travelInfoRailTimesBtnText">Live Rail Departures</string>
    <string name="travelInfoBusTimetableBtnText">Bus Timetable</string>
    <string name="bbemailBlackboardBtnText">Blackboard</string>
    <string name="bbemailEmailBtnText">Email</string>
    <string name="campusMapsWhiteknightsBtnText">Whiteknights Campus</string>
    <string name="campusMapsLoroBtnText">London Road Campus</string>
    <string name="campusMapsHallsBtnText">Student Halls</string>
    <string name="studentInfoMenuTitle">Student Information</string>
    <string name="campusNavMenuTitle">Campus Navigation</string>
    <string name="travelInfoMenuTitle">Travel Information</string>
    <string name="bbEmailMenuTitle">Blackboard &amp; Email</string>
    <string name="MenuViewToggleBtnList">List</string>
    <string name="MenuViewToggleBtnGrid">Grid</string>
    <string name="uorTweetsBtnText">UoR Tweets</string>
    <string name="rusuTweetsBtnText">RUSU Tweets</string>
    <string name="refreshHeaderText">Pull to refresh</string>
    <string name="safetyMessage1">In an emergency, always dial 999.</string>
    <string name="safetyMessage2">When safe to do so, contact University of Reading Security.</string>
    <string name="securityEmergencyBtnText">Report an emergency</string>
    <string name="securityNonEmergencyBtnText">Report non-emergency</string>
    <string name="securityContactNumber">0118 123 4567</string>
    <string name="personalSafetyBtnText">Personal Safety Guide</string>
    <string name="healthAndSafetyBtnText">Report Health &amp; Safety Incident</string>
    <string name="chancellorWayBusBtnText">Chancellors Way</string>
    <string name="whiteknightsHouseBusBtnText">Whiteknights House</string>
    <string name="railStationBusBtnText">Reading Station</string>
    <string name="chancellorWayBusUrl">http://transportapi.com/v3/uk/bus/stop/039027900001/live.json?app_id=03bf8009&amp;app_key=d9307fd91b0247c607e098d5effedc97&amp;group=no&amp;limit=8&amp;nextbuses=yes</string>
    <string name="whiteknightsHouseBusUrl">http://transportapi.com/v3/uk/bus/stop/039027900002/live.json?app_id=03bf8009&amp;app_key=d9307fd91b0247c607e098d5effedc97&amp;group=no&amp;limit=8&amp;nextbuses=yes</string>
    <string name="railStationBusUrl">http://transportapi.com/v3/uk/bus/stop/039028150004/live.json?app_id=03bf8009&amp;app_key=d9307fd91b0247c607e098d5effedc97&amp;group=no&amp;limit=15&amp;nextbuses=yes</string>
    <string name="routeTxtViewText">Route</string>
    <string name="destinationTxtViewText">Destination</string>
    <string name="arrivalTxtViewText">Time</string>
    <string name="todayBtnText">Today</string>
    <string name="mapSearchHintText">Search here</string>
    <string name="mapSearchBtnText">Search</string>
    <string name="distanceTxtViewText">[distance]</string>
    <string name="timeTxtViewText">[time]</string>
    <string name="englandMapBounds">55.811741, 1.76896, 49.871159, -6.37988</string>
    <string name="uniUsernameTextView">University Username:</string>
    <string name="uniPasswordTextView">University Password:</string>
    <string name="loginBtnText">Log in</string>
    <string name="loginTextViewText">Authentication required</string>
    <string name="loginTextView2Text">Please enter your university credentials</string>
    <string name="loginUsernameEditTextHint">Username</string>
    <string name="loginPasswordEditTextHint">Password</string>
    <string name="emergencyContactNumber">07590917581</string>
    <string name="nonEmergencyContactNumber">07590917581</string>

    <string-array name="menuCategories">
        <item>Student Information</item>
        <item>Latest News</item>
        <item>Campus Navigation</item>
        <item>Travel Information</item>
        <item>Blackboard &amp; Email</item>
        <item>Timetable</item>
    </string-array>

    <string-array name="studentInfoItems">
        <item>Student Services</item>
        <item>Library</item>
        <item>University Payments</item>
        <item>RISIS</item>
        <item>Staff Search</item>
    </string-array>

    <string-array name="latestNewsItems">
        <item>Latest Tweets</item>
    </string-array>

    <string-array name="campusNavigationItems">
        <item>Interactive Google Map</item>
        <item>Whiteknights Campus Map</item>
        <item>London Road Campus Map</item>
        <item>Student Halls Map</item>
    </string-array>

    <string-array name="travelInformationItems">
        <item>Live Bus Times</item>
        <item>Live Train Times</item>
        <item>University Bus Timetable</item>
    </string-array>

    <string-array name="bbEmailItems">
        <item>Blackboard</item>
        <item>University Email</item>
    </string-array>

    <string-array name="timetableItems">
        <item>Student Timetable</item>
    </string-array>

    <string name="search_nearby_textView_text">Show nearby:</string>
    <string name="search_nearby_prompt">Show nearby</string>
    <string-array name="search_nearby_items">
        <item>None Selected</item>
        <item>Cafe</item>
        <item>Parking</item>
        <item>Convenience Store</item>
        <item>Pharmacy</item>
        <item>Hospital</item>
        <item>Police</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
</resources>
