<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.andrewwilloughby.campus_assistant.LoginActivity">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityContainer"
    android:weightSum="1"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headImageContainer">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/uor_bg_image"
            android:id="@+id/headBackgroundImage"
            android:scaleType="fitXY"
            android:layout_height="175dp" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:text="@string/loginTextViewText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/uniUsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView"
            android:layout_weight="1"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameEditText"
            android:layout_weight="1"
            android:textAlignment="center"
            android:hint="Username"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/uniPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextView"
            android:layout_weight="1"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_weight="1"
            android:textAlignment="center"
            android:singleLine="true"
            android:hint="Password"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/saveBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/TextWhite"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>

</RelativeLayout>
